# move-on-aptos

./: Cargo.toml  README.md  SECURITY.md  rust-toolchain.toml
language/move-prover/src/: cli.rs
scripts/: check_pr.sh  dev_setup.sh  rust_lint.sh
